# trellis

./: Cargo.toml  README.md  deny.toml  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml  spellcheck.yml
examples/: integration.rs  least_squares.rs
src/: checkpoint.rs  lib.rs  prelude.rs  problem.rs  procedure.rs  progress.rs  result.rs
src/engine/: action.rs  builder.rs  cancellation.rs  checkpoint.rs  context.rs  event.rs  extensions.rs  lifecycle.rs  mod.rs  policy.rs  result.rs  termination.rs
src/engine/checkpoint/: in_memory.rs  json.rs  mod.rs
src/engine/policy/: absolute_tolerance.rs  action.rs  cancellation.rs  checkpoint.rs  complete.rs  composite.rs  max_iter.rs  mod.rs  no_progress.rs  relative_tolerance.rs  stagnation.rs  target_value.rs  timeout.rs  tolerance.rs
src/runner/: mod.rs
src/state/: convergence.rs  mod.rs  policy.rs  progress.rs  runtime.rs  status.rs  user.rs  view.rs
src/watchers/: checkpoint.rs  csv_file.rs  failure.rs  metrics.rs  mod.rs  plot.rs  sampler.rs  tracing.rs
src/watchers/plot/: internal.rs  mod.rs  plot.rs
tests/: mod.rs
