[package]
name = "trellis-runner"
version = "0.1.6"
edition = "2021"
description = "Calculation runner"
license = "MIT"
authors = ["Christopher Gubbin <chris.gubbin@gmail.com>"]
repository = "https://github.com/sensoriumtl/trellis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
csv = "1.3.0"
ctrlc = { version = "3", optional = true }
fs-err = { version = "2", optional = true }
ndarray = { version = "0.15.6", optional = true }
num-traits = "0.2.19"
plotly = { version = "0.8.4", features = [
    "plotly_ndarray",
    "ndarray",
], optional = true }
plotters = "0.3.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = { version = "3", optional = true }
thiserror = "1"
# tokio = { version = "1", features = ["sync"], optional = true }
tokio-util = "0.7.12"
tracing = "0.1.40"
web-time = "1.1.0"

[features]
# default = ["tokio", "ctrlc", "plotting", "writing"]
default = []
ctrlc = ["dep:ctrlc"]
plotting = ["dep:plotly", "dep:ndarray"]
writing = [
    "dep:tempfile",
    "dep:fs-err",
]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.4"
tokio-util = "0.7"
