[package]
name = "trellis-runner"
version = "0.4.1"
edition = "2021"
description = "Calculation runner"
license = "MIT"
authors = ["Christopher Gubbin <chris.gubbin@gmail.com>"]
repository = "https://github.com/sensoriumtl/trellis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.19"
thiserror = "2"
tokio-util = "0.7.12"
tracing = "0.1.40"

ctrlc = { version = "3", optional = true }

plotters = {version = "0.3.7", optional = true }

csv = {version = "1", optional = true }
fs-err = { version = "2", optional = true }
tempfile = { version = "3", optional = true }
serde_json = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
bincode = {version = "1", optional = true }

[features]
# default = ["tokio", "ctrlc", "plotting", "writing"]
default = []
ctrlc = ["dep:ctrlc"]
plotting = ["dep:plotters"]
serde = ["dep:serde"]
writing = ["dep:csv", "dep:fs-err", "dep:tempfile", "dep:serde_json", "serde"]

